$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-24 [B] Fixed missing uniqid() parameter for users running PHP 4 (thread ID 64193) {eenemeenemuu}
2010-03-23 [B] Fixed empty list of available bridges in bridge manager when running PHP4 (thread ID 64220) {Nibbler}
2010-03-23 [B] Fixed missing album details for albums in sub categories (thread ID 64215) {eenemeenemuu}
2010-03-23 [M] Counted version number up from in file headers from cpg1.5.3 to cpg1.5.4 as a preparation for the next release {GauGau}
2010-03-22 [D] Updated visual appearance of plugin version checking routine {GauGau}
2010-03-22 [D] Added documentation section about plugin manager feature that checks Coppermine version of a plugin {GauGau}
2010-03-22 [O] Removed line numbers showing through on approval screen, displaying additional related links instead (thread ID 64192) {GauGau}
2010-03-21 [A] Added user-contributed Dutch language file (thread ID 64109) {GauGau}
2010-03-19 [B] Fixed issue when admin renames file and new file name already exists (thread ID 61956) {eenemeenemuu}
2010-03-19 [B] Fixed error message after upload for registered users (thread ID 64117) {eenemeenemuu}
2010-03-19 [C] Removed hard coded table header layout in user manager (thread ID 64166) {eenemeenemuu}
2010-03-18 [O] Removed reference to oudated config setting 'display_social_bookmarks' (thread ID 64143) {GauGau}
2010-03-18 [B] Fixed clickable keyword in file information (thread ID 64151) {eenemeenemuu}
2010-03-18 [B] Fixed clickable keyword search (thread ID 64151) {eenemeenemuu}
2010-03-17 [C] Fixed a lot of cosmetical issues with curve theme and IE7 {timoswelt}